# IDS_SimpleLiveWpf

./: AcquisitionWorker.cs  App.xaml.cs  BackEnd.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  README.md  WpfApp1.csproj  WpfApp1.sln  ids_peak.lib  ids_peak_ipl.lib
